--- a/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
+++ b/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
@@ -23,14 +23,14 @@ fit_clg_log_tfmn <- function(data_tb,
                              iters_1L_int = 4000L,
                              seed_1L_int = 1000L
                            ){
-  brm_model_ls <- fit_ts_model_with_brm(data_tb,
+  mdl_ls <- fit_ts_model_with_brm(data_tb,
                                         dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                         predictor_vars_nms_chr = predictor_vars_nms_chr,
                                         link_1L_chr = "identity",
                                         id_var_nm_1L_chr = id_var_nm_1L_chr,
                                         iters_1L_int = iters_1L_int,
                                         seed_1L_int = seed_1L_int)
-    return(brm_model_ls)
+    return(mdl_ls)
 }
 fit_gsn_log_lnk <- function(data_tb,
                             dep_var_nm_1L_chr = "aqol6d_total_w",
@@ -38,14 +38,14 @@ fit_gsn_log_lnk <- function(data_tb,
                             id_var_nm_1L_chr = "fkClientID",
                             iters_1L_int = 4000L,
                             seed_1L_int = 1000L){
-  brm_model_ls <- fit_ts_model_with_brm(data_tb,
+  mdl_ls <- fit_ts_model_with_brm(data_tb,
                                         dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                         predictor_vars_nms_chr = predictor_vars_nms_chr,
                                         link_1L_chr = "log",
                                         id_var_nm_1L_chr = id_var_nm_1L_chr,
                                         iters_1L_int = iters_1L_int,
                                         seed_1L_int = seed_1L_int)
-  return(brm_model_ls)
+  return(mdl_ls)
 }
 fit_ts_model_with_brm <- function(data_tb,
                                dep_var_nm_1L_chr,
@@ -54,7 +54,7 @@ fit_ts_model_with_brm <- function(data_tb,
                                link_1L_chr = "identity",
                                iters_1L_int = 4000L,
                                seed_1L_int = 1000L){
-      brm_model_ls <- brms::brm(formula = as.formula(paste0(dep_var_nm_1L_chr,#"aqol6d_total_w_cloglog",
+      mdl_ls <- brms::brm(formula = as.formula(paste0(dep_var_nm_1L_chr,#"aqol6d_total_w_cloglog",
                                                             " ~ ", 
                                                         purrr::map_chr(predictor_vars_nms_chr,
                                                                        ~ paste0(.x,
@@ -68,52 +68,89 @@ fit_ts_model_with_brm <- function(data_tb,
                                 family = gaussian(link=link_1L_chr), 
                                 iter = iters_1L_int,
                                 seed = seed_1L_int)
-      return(brm_model_ls)
+      return(mdl_ls)
 }
-make_brm_model_plts <- function(brm_model_ls,
+  write_brm_mdl_tiff <- function(plt_fn,
+                                 path_to_write_to_1L_chr,
+                                 mdl_nm_1L_chr,
+                                 units_1L_chr = "in", 
+                                 width_1L_dbl = 5, 
+                                 height_1L_dbl = 6, 
+                                 rsl_1L_dbl = 300){
+    path_to_plot_1L_chr <- paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".tiff")           
+    grDevices::tiff(path_to_plot_1L_chr, 
+                    units = units_1L_chr, 
+                    width = width_1L_dbl, 
+                    height = height_1L_dbl, 
+                    res = rsl_1L_dbl)
+    plt_fn %>% rlang::exec()
+    dev.off()
+    return(path_to_plot_1L_chr)
+  }
+write_brm_model_plts <- function(mdl_ls,
                            data_tb,
+                           mdl_nm_1L_chr,
+                           path_to_write_to_1L_chr,
                            dep_var_nm_1L_chr = "aqol6d_total_w",
                            dep_var_desc_1L_chr = "AQoL-6D utility score",
                            round_var_nm_1L_chr = "round",
                            tfmn_fn = function(x){x},# function(x){1-exp(-exp(x))}
-                           plot3_fn =ggplot2::geom_point,
+                           plot3_fn = ggplot2::geom_point,
+                           units_1L_chr = "in",
+                           height_dbl = c(rep(6,2),rep(5,2)), 
+                           width_dbl = c(rep(5,2),rep(6,2)),
+                           rsl_dbl = rep(300,4),
                            args_ls = NULL,
                            seed_1L_dbl = 23456){
-  plot_1_plt <- plot(brm_model_ls, ask=F)
   set.seed(seed_1L_dbl)
-  data_tb$Predicted <- predict(brm_model_ls)[,1] %>% tfmn_fn()
-  plot_2_plt <- data_tb %>% 
-        dplyr::mutate(Observed = !!rlang::sym(dep_var_nm_1L_chr)) %>% 
-        tidyr::gather(variable, value, Predicted, Observed) %>%
-        ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
-        ggalt::geom_bkde(alpha=0.5) +
-        ggplot2::geom_rug() +
-        viridis::scale_fill_viridis(discrete = TRUE) +
-        ggplot2::theme_bw() + 
-        ggplot2::theme(legend.position = "bottom") +
-        ggplot2::labs(x = dep_var_desc_1L_chr, 
-                      y = "Density", fill="")
-    plot_3_plt <- ggplot2::ggplot(data_tb) +
-      rlang::exec(plot3_fn,  
-                              ggplot2::aes(x = !!rlang::sym(dep_var_nm_1L_chr), 
-                                       y = Predicted,
-                                       col = !!rlang::sym(round_var_nm_1L_chr)),
-                              size = 1,
-                              !!!args_ls) + 
-      ggplot2::theme_bw()  + 
-    ggplot2::xlim(0,1)  + 
-    ggplot2::ylim(0,1)  + 
-    ggplot2::scale_color_manual(values=c("#D55E00","#56B4E9"))  +
-      ggplot2::labs(x = paste0("Observed ", dep_var_desc_1L_chr),
-                    y = paste0("Predicted ", dep_var_desc_1L_chr), 
-                    col = "") +
-      ggplot2::theme(legend.position="bottom")
-  brm_model_plts_ls = list(plot_1_plt, 
-                           plot_2_plt,
-                           plot_3_plt)
-return(brm_model_plts_ls)
+  data_tb$Predicted <- predict(mdl_ls)[,1] %>% tfmn_fn()
+  mdl_plts_paths_ls <- purrr::map(1:4, 
+              ~  {
+                if(.x %in% c(1,2)){
+                  plt_fn <- function(){plot(mdl_ls, ask=F, plot = F)[.x]}
+                }else{
+                  if(.x == 3){
+                     plt_fn <- function(){data_tb %>% 
+                       dplyr::mutate(Observed = !!rlang::sym(dep_var_nm_1L_chr)) %>% 
+                       tidyr::gather(variable, value, Predicted, Observed) %>%
+                       ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
+                       ggalt::geom_bkde(alpha = 0.5) +
+                       ggplot2::geom_rug() +
+                       viridis::scale_fill_viridis(discrete = TRUE) +
+                       ggplot2::theme_bw() + 
+                       ggplot2::theme(legend.position = "bottom") +
+                       ggplot2::labs(x = dep_var_desc_1L_chr, 
+                                     y = "Density", fill="")}
+                  }else{
+                     plt_fn <- function(){ggplot2::ggplot(data_tb) +
+                       rlang::exec(plot3_fn,
+                                   ggplot2::aes(x = !!rlang::sym(dep_var_nm_1L_chr), 
+                                                y = Predicted,
+                                                col = !!rlang::sym(round_var_nm_1L_chr)),
+                                   size = 1,
+                                   !!!args_ls) + 
+                       ggplot2::theme_bw()  + 
+                       ggplot2::xlim(0,1)  + 
+                       ggplot2::ylim(0,1)  + 
+                       ggplot2::scale_color_manual(values=c("#D55E00","#56B4E9"))  +
+                       ggplot2::labs(x = paste0("Observed ", dep_var_desc_1L_chr),
+                                     y = paste0("Predicted ", dep_var_desc_1L_chr), 
+                                     col = "") +
+                       ggplot2::theme(legend.position="bottom")
+                       }
+                  }
+                }
+                write_brm_mdl_tiff(plt_fn,
+                                   path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                                   mdl_nm_1L_chr = paste0(mdl_nm_1L_chr,"_",.x),
+                                   units_1L_chr = units_1L_chr, 
+                                   width_1L_dbl =  width_dbl[.x], 
+                                   height_1L_dbl = height_dbl[.x], 
+                                   rsl_1L_dbl = rsl_dbl[.x])
+                })
+return(mdl_plts_paths_ls)
 }
-make_smry_of_brm_mdl <- function(brm_model_ls,
+make_smry_of_brm_mdl <- function(mdl_ls,
                                  data_tb,
                                  dep_var_nm_1L_chr = "aqol6d_total_w",
                                  predictor_vars_nms_chr,
@@ -123,10 +160,10 @@ make_smry_of_brm_mdl <- function(brm_model_ls,
   if(is.na(mdl_nm_1L_chr))
     mdl_nm_1L_chr <- predictor_vars_nms_chr[1]
   set.seed(seed_1L_dbl)
-  predictions <- predict(brm_model_ls, summary=F)
-  coef <- summary(brm_model_ls, digits = 4)$fixed
+  predictions <- predict(mdl_ls, summary=F)
+  coef <- summary(mdl_ls, digits = 4)$fixed
   coef <- coef[1:nrow(coef),1:4]
-  R2 <- brms::bayes_R2(brm_model_ls)
+  R2 <- brms::bayes_R2(mdl_ls)
   RMSE <- psych::describe(apply(predictions,
                                 1,
                                 fn,
@@ -135,7 +172,7 @@ make_smry_of_brm_mdl <- function(brm_model_ls,
                           skew = F, 
                           ranges = F)
   RMSE <- cbind(RMSE$mean, RMSE$sd, RMSE$Q0.25, RMSE$Q0.75)
-  Sigma <- summary(brm_model_ls, digits = 4)$spec_par[1:4]
+  Sigma <- summary(mdl_ls, digits = 4)$spec_par[1:4]
   smry_of_brm_mdl_tb <- data.frame(round(rbind(coef,R2,RMSE,Sigma),3))  %>% 
     dplyr::mutate(Parameter=c("Intercept",purrr::map(predictor_vars_nms_chr,
                                   ~ paste0(.x, c(" baseline", 
@@ -166,18 +203,18 @@ make_smry_of_ts_mdl <- function(data_tb,
                                      id_var_nm_1L_chr = id_var_nm_1L_chr,
                                      round_var_nm_1L_chr = round_var_nm_1L_chr,
                                      round_bl_val_1L_chr = round_bl_val_1L_chr)
-    dep_var_nm_1L_chr <- ifelse(identical(fn,fit_clg_log_tfmn),
+    tfd_dep_var_nm_1L_chr <- ifelse(identical(fn,fit_clg_log_tfmn),
                                 transform_dep_var_nm_for_cll(dep_var_nm_1L_chr),      
                                 dep_var_nm_1L_chr)
     args_ls <- list(data_tb = tfd_data_tb,
-                    dep_var_nm_1L_chr = dep_var_nm_1L_chr, # ADD CONDITIONAL LOGIC
+                    dep_var_nm_1L_chr = tfd_dep_var_nm_1L_chr, 
                     predictor_vars_nms_chr = predictor_vars_nms_chr,
                     iters_1L_int = iters_1L_int,
                     seed_1L_int = seed_1L_int)
   mdl_ls <- rlang::exec(fn,!!!args_ls)
   smry_of_ts_mdl_tb <- make_smry_of_brm_mdl(mdl_ls,
                                             data_tb = tfd_data_tb,
-                                            dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                            dep_var_nm_1L_chr = tfd_dep_var_nm_1L_chr,
                                             predictor_vars_nms_chr = predictor_vars_nms_chr,
                                             fn = ifelse(identical(fn,fit_gsn_log_lnk),
                                                         calculate_rmse,
@@ -185,20 +222,19 @@ make_smry_of_ts_mdl <- function(data_tb,
                                             mdl_nm_1L_chr = mdl_nm_1L_chr
                                             )
   if(!is.na(path_to_write_to_1L_chr)){
-     write_ts_mdl(mdl_ls,
-               data_tb = tfd_data_tb,
-               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-               predictor_vars_nms_chr = predictor_vars_nms_chr,
-               id_var_nm_1L_chr = id_var_nm_1L_chr,
-               mdl_nm_1L_chr = mdl_nm_1L_chr,
-               path_to_write_to_1L_chr = path_to_write_to_1L_chr) 
+    saveRDS(mdl_ls,paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".RDS"))
+    mdl_plts_ls <- write_brm_model_plts(mdl_ls,
+                                     tfd_data_tb,
+                                     dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
+                                     mdl_nm_1L_chr = mdl_nm_1L_chr,
+                                     path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                                     round_var_nm_1L_chr = round_var_nm_1L_chr,
+                                     tfmn_fn = ifelse(identical(fn, fit_gsn_log_lnk),
+                                                      function(x){x},
+                                                      function(x){1-exp(-exp(x))}))
   }
 if(print_plots_1L_lgl){
-  mdl_plts_ls <- make_brm_model_plts(mdl_ls,
-                                       tfd_data_tb,
-                                       tfmn_fn = ifelse(identical(fn,fit_gsn_log_lnk),
-                                                        function(x){x},
-                                                        function(x){1-exp(-exp(x))}))
+
   print_brm_model(mdl_ls,
                   brm_model_plts_ls = mdl_plts_ls,
                   mdl_nm_1L_chr = mdl_nm_1L_chr)
@@ -219,14 +255,14 @@ predict_from_mdl_coefs <- function(smry_of_mdl_tb,
                dplyr::pull(Estimate))
 return(pred_dbl)
 }
-print_brm_model <- function(brm_model_ls,
+print_brm_model <- function(mdl_ls,
                             brm_model_plts_ls,
                             mdl_nm_1L_chr){
   cat('\n') 
   cat("### ", mdl_nm_1L_chr, "\n")
   cat('\n') 
   print(brm_model_plts_ls[[1]])
-  #print(summary(brm_model_ls, digits = 4))
+  #print(summary(mdl_ls, digits = 4))
   print(brm_model_plts_ls[[2]])
   print(brm_model_plts_ls[[3]])
   cat('\n')
@@ -259,23 +295,25 @@ transform_dep_var_nm_for_cll <- function(dep_var_nm_1L_chr){
   tfd_dep_var_nm_1L_chr <- paste0(dep_var_nm_1L_chr,"_cloglog")
   return(tfd_dep_var_nm_1L_chr)
 }
-
-write_ts_mdl <- function(mdl_ls,
+transform_ts_mdl_data <- function(mdl_ls,
                       data_tb,
                       dep_var_nm_1L_chr = "aqol6d_total_w",
                       predictor_vars_nms_chr,
                       id_var_nm_1L_chr = "fkClientID",
-                      mdl_nm_1L_chr,
-                      path_to_write_to_1L_chr
+                      mdl_nm_1L_chr#,
+                      #path_to_write_to_1L_chr
                       ){
   old_data_tb <- data_tb %>%
           dplyr::select(c(dplyr::all_of(id_var_nm_1L_chr),
                           dplyr::all_of(dep_var_nm_1L_chr),
-                          predictor_vars_nms_chr %>% purrr::map(~paste0(.x,c("","_baseline","_change"))) %>%
+                          predictor_vars_nms_chr %>% purrr::map(~paste0(.x,
+                                                                        c("","_baseline","_change"))) %>%
                             purrr::flatten_chr()))
-cnfdl_mdl_ls <- mdl_ls 
-cnfdl_mdl_ls$data <- old_data_tb %>% as.data.frame() %>% dplyr::summarise(dplyr::across(dplyr::everything(), ~ sample(.x,1))) 
-saveRDS(cnfdl_mdl_ls,paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".RDS"))
+  cnfdl_mdl_ls <- mdl_ls 
+  cnfdl_mdl_ls$data <- old_data_tb %>% as.data.frame() %>%
+    dplyr::summarise(dplyr::across(dplyr::everything(), ~ sample(.x,1))) 
+#saveRDS(cnfdl_mdl_ls,paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".RDS"))
+return(cnfdl_mdl_ls)
 }
 
 ```
