--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -23,16 +23,18 @@ library(magrittr)
 # library(DT)
 # 
 # datatable(iris)
-mdl_ls<-readRDS("../../../../../../../Data/R_Format/Utility_Models/PHQ9_GSN_LOG.RDS")
-fn <- fit_gsn_log_lnk
+mdl_ls <- readRDS("../../../../../../../Data/R_Format/Utility_Models/PHQ9_CLL_TFN.RDS")
+fn <- fit_clg_log_tfmn
 tfd_data_tb <- transform_tb_to_mdl_inp(transform_raw_aqol_tb_to_aqol6d_tb(readRDS("../Data/fake_pop_tb.rds")),
                                     predictor_vars_nms_chr = c("PHQ9","SOFAS"))
-mdl_plts_ls <- make_brm_model_plts(mdl_ls,
-                                       tfd_data_tb,
-                                       tfmn_fn = ifelse(identical(fn,fit_gsn_log_lnk),
+tfd_dep_var_nm_1L_chr <- transform_dep_var_nm_for_cll(dep_var_nm_1L_chr = "aqol6d_total_w")
+mdl_plts_ls <- make_brm_model_plts(brm_model_ls =  mdl_ls,
+                                   data_tb = tfd_data_tb,
+                                   dep_var_nm_1L_chr = tfd_dep_var_nm_1L_chr,
+                                   tfmn_fn = ifelse(identical(fn,fit_gsn_log_lnk),
                                                         function(x){x},
                                                         function(x){1-exp(-exp(x))})) %>%
-  stats::setNames(c("A","B","C"))
+  stats::setNames(c("A","B","C","D"))
 
 ```
 
