--- a/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
+++ b/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
@@ -115,8 +115,8 @@ make_smry_of_ts_mdl <- function(data_tb,
                                           round_var_nm_1L_chr = "round",
                                           round_bl_val_1L_chr = "Baseline",
                                           iters_1L_int = 4000L,
-                                          seed_1L_int = 1000L,
-                                          print_plots_1L_lgl = T){
+                                          seed_1L_int = 1000L#,print_plots_1L_lgl = T
+                                ){
     tfd_data_tb <- transform_tb_to_mdl_inp(data_tb,
                                      dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                      predictor_vars_nms_chr = predictor_vars_nms_chr,
@@ -132,7 +132,7 @@ make_smry_of_ts_mdl <- function(data_tb,
                     iters_1L_int = iters_1L_int,
                     seed_1L_int = seed_1L_int)
   mdl_ls <- rlang::exec(fn,!!!args_ls)
-  smry_of_ts_mdl_tb <- make_smry_of_brm_mdl(mdl_ls,
+  smry_of_ts_mdl_ls <- list(smry_of_ts_mdl_tb = make_smry_of_brm_mdl(mdl_ls,
                                             data_tb = tfd_data_tb,
                                             dep_var_nm_1L_chr = tfd_dep_var_nm_1L_chr,
                                             predictor_vars_nms_chr = predictor_vars_nms_chr,
@@ -140,10 +140,11 @@ make_smry_of_ts_mdl <- function(data_tb,
                                                         calculate_rmse,
                                                         calculate_rmse_tfmn), 
                                             mdl_nm_1L_chr = mdl_nm_1L_chr
-                                            )
+                                            ))
   if(!is.na(path_to_write_to_1L_chr)){
-    saveRDS(mdl_ls,paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".RDS"))
-    mdl_plts_ls <- write_brm_model_plts(mdl_ls,
+    smry_of_ts_mdl_ls$path_to_mdl_ls_1L_chr <- paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".RDS")
+    saveRDS(mdl_ls,path_to_mdl_ls_1L_chr)
+    smry_of_ts_mdl_ls$paths_to_mdl_plts_chr <- write_brm_model_plts(mdl_ls,
                                      tfd_data_tb,
                                      dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
                                      mdl_nm_1L_chr = mdl_nm_1L_chr,
@@ -153,13 +154,7 @@ make_smry_of_ts_mdl <- function(data_tb,
                                                       function(x){x},
                                                       function(x){1-exp(-exp(x))}))
   }
-if(print_plots_1L_lgl){
-
-  print_brm_model(mdl_ls,
-                  brm_model_plts_ls = mdl_plts_ls,
-                  mdl_nm_1L_chr = mdl_nm_1L_chr)
-}
-return(smry_of_ts_mdl_tb)
+return(smry_of_ts_mdl_ls)
 }
 plot_obsd_predd_dnst <- function(tfd_data_tb){
   tfd_data_tb %>%
@@ -176,7 +171,6 @@ plot_obsd_predd_dnst <- function(tfd_data_tb){
 plot_obsd_predd_sctr <- function(tfd_data_tb, 
                                         dep_var_nm_1L_chr, 
                                         dep_var_desc_1L_chr,
-                                 #plot_fn,
                                         args_ls){
   ggplot2::ggplot(tfd_data_tb) +
                        rlang::exec(ggplot2::geom_point,
@@ -209,18 +203,18 @@ predict_from_mdl_coefs <- function(smry_of_mdl_tb,
                dplyr::pull(Estimate))
 return(pred_dbl)
 }
-print_brm_model <- function(mdl_ls,
-                            brm_model_plts_ls,
-                            mdl_nm_1L_chr){
-  cat('\n') 
-  cat("### ", mdl_nm_1L_chr, "\n")
-  cat('\n') 
-  print(brm_model_plts_ls[[1]])
-  #print(summary(mdl_ls, digits = 4))
-  print(brm_model_plts_ls[[2]])
-  print(brm_model_plts_ls[[3]])
-  cat('\n')
-}
+# print_brm_model <- function(mdl_ls,
+#                             brm_model_plts_ls,
+#                             mdl_nm_1L_chr){
+#   cat('\n') 
+#   cat("### ", mdl_nm_1L_chr, "\n")
+#   cat('\n') 
+#   print(brm_model_plts_ls[[1]])
+#   #print(summary(mdl_ls, digits = 4))
+#   print(brm_model_plts_ls[[2]])
+#   print(brm_model_plts_ls[[3]])
+#   cat('\n')
+# }
 transform_tb_to_mdl_inp <- function(data_tb,
                                     dep_var_nm_1L_chr = "aqol6d_total_w",
                                     predictor_vars_nms_chr,
@@ -276,16 +270,16 @@ write_brm_model_plts <- function(mdl_ls,
                            dep_var_nm_1L_chr = "aqol6d_total_w",
                            dep_var_desc_1L_chr = "AQoL-6D utility score",
                            round_var_nm_1L_chr = "round",
-                           tfmn_fn = function(x){x},# function(x){1-exp(-exp(x))}
-                           #sctr_plt_fn = ggplot2::geom_point,
+                           tfmn_fn = function(x){x},
                            units_1L_chr = "in",
                            height_dbl = c(rep(6,2),rep(5,2)), 
-                           width_dbl = c(rep(5,2),rep(6,2)),
+                           width_dbl = c(rep(6,2),rep(6,2)),
                            rsl_dbl = rep(300,4),
                            args_ls = NULL,
                            seed_1L_dbl = 23456){
   set.seed(seed_1L_dbl)
   tfd_data_tb$Predicted <- predict(mdl_ls)[,1] %>% tfmn_fn()
+   plt_nms_chr <- paste0(mdl_nm_1L_chr, "_", c("coefs","hetg", "dnst","sctr_plt"))
   mdl_plts_paths_ls <- purrr::map(1:4, 
               ~  {
                 if(.x %in% c(1,2)){
@@ -305,31 +299,38 @@ write_brm_model_plts <- function(mdl_ls,
                                         args_ls = args_ls)
                   }
                 }
-                write_brm_mdl_tiff(plt_fn,
+                write_brm_mdl_plt_fl(plt_fn,
                                    fn_args_ls = fn_args_ls,
                                    path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                                   mdl_nm_1L_chr = paste0(mdl_nm_1L_chr,"_",.x),
+                                   plt_nm_1L_chr = plt_nms_chr[.x],
                                    units_1L_chr = units_1L_chr, 
                                    width_1L_dbl =  width_dbl[.x], 
                                    height_1L_dbl = height_dbl[.x], 
                                    rsl_1L_dbl = rsl_dbl[.x])
-                })
+                }) %>%
+    stats::setNames(plt_nms_chr)
 return(mdl_plts_paths_ls)
 }
-  write_brm_mdl_tiff <- function(plt_fn,
+  write_brm_mdl_plt_fl <- function(plt_fn,
+                                   
                                  fn_args_ls = NULL,
                                  path_to_write_to_1L_chr,
-                                 mdl_nm_1L_chr,
+                                 plt_nm_1L_chr,
+                                 grpx_fn = grDevices::png,
                                  units_1L_chr = "in", 
-                                 width_1L_dbl = 5, 
+                                 width_1L_dbl = 6, 
                                  height_1L_dbl = 6, 
                                  rsl_1L_dbl = 300){
-    path_to_plot_1L_chr <- paste0(path_to_write_to_1L_chr,"/",mdl_nm_1L_chr,".tiff")           
-    grDevices::tiff(path_to_plot_1L_chr, 
+    path_to_plot_1L_chr <- paste0(path_to_write_to_1L_chr,
+                                  "/",
+                                  plt_nm_1L_chr,
+                                  ifelse(identical(grpx_fn,grDevices::png),".png",".tiff"))           
+    rlang::exec(grpx_fn,
+                !!!list(path_to_plot_1L_chr, 
                     units = units_1L_chr, 
                     width = width_1L_dbl, 
                     height = height_1L_dbl, 
-                    res = rsl_1L_dbl)
+                    res = rsl_1L_dbl))
     plt <- rlang::exec(plt_fn,!!!fn_args_ls)
     print(plt)
     dev.off()
