--- a/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
+++ b/vignettes/Child_RMDs/_Programatic_Titling_Test.Rmd
@@ -1,10 +1,14 @@
 ---
-title: "Untitled"
-author: "Matthew Hamilton & Caroline Gao"
-date: "24/10/2020"
-output: 
+title: "TEST"
+output:
+  officedown::rdocx_document:
+    number_sections: yes
+  pdf_document:
+    number_sections: yes
   html_document:
-    fig_caption: true
+    df_print: paged
+  bookdown::html_document2:
+    number_sections: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -13,38 +17,65 @@ library(xtable) # EDIT
 library(FBaqol) # EDIT
 library(magrittr)
 ```
+# TEST SECTION
 
 ```{r child="./AQoL_6D_Replication_Fns.Rmd", echo=FALSE}
 
 ```
 
 ```{r, include=FALSE}
-mdl_ls <- readRDS("../../../../../../../Data/Project/Utility_Models/PHQ9_GSN_LOG.RDS")
-fn <- fit_gsn_log_lnk
-data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS("../Data/fake_pop_tb.rds"))
-tfd_data_tb <- transform_tb_to_mdl_inp(data_tb,
-                                    predictor_vars_nms_chr = c("PHQ9","SOFAS"))
-dep_var_nm_1L_chr <- "aqol6d_total_w"
-tfd_dep_var_nm_1L_chr <- transform_dep_var_nm_for_cll(dep_var_nm_1L_chr)
-mdl_plts_ls <- make_brm_model_plts(brm_model_ls =  mdl_ls,
-                                   data_tb = tfd_data_tb,
-                                   dep_var_nm_1L_chr = tfd_dep_var_nm_1L_chr,
-                                   tfmn_fn = ifelse(identical(fn,fit_gsn_log_lnk),
-                                                        function(x){x},
-                                                        function(x){1-exp(-exp(x))})) %>%
-  stats::setNames(c("A","B","C","D"))
+path_to_mdl_1L_chr <- "../../../../../../../Data/Project/Utility_Models/PHQ9_GSN_LOG.RDS"
+#mdl_ls <- readRDS(path_to_mdl_1L_chr)
+paths_to_mdl_plts_chr <- paste0(path_to_mdl_1L_chr %>% stringr::str_sub(end=-5), paste0("_",c("coefs","hetg", "dnst","sctr_plt"),".png"))
+plt_nms_chr <- c("Caption 1","Caption 2","Caption 3","Caption 4")
+output_ls <- list(`First predictor` = paths_to_mdl_plts_chr,
+                  `Second predictor` = paths_to_mdl_plts_chr)
+plt_nms_chr <- rep(plt_nms_chr,2)
+fig_nums <- captioner::captioner()
+```
+
+
+```{r results = "asis", echo = F, fig.retina=1}
+#grid::grid.raster(tiff::readTIFF(paths_to_mdl_plts_chr[1]))
+print_ts_mdl_plts <- function(paths_to_plts_chr,
+                              title_1L_chr,
+                              label_refs_chr){
+    cat('\n')
+  cat("## ", title_1L_chr, "\n")
+  cat('\n')
+  purrr::walk2(paths_to_plts_chr,
+              paste0(#"\\label{fig:fig",label_refs_chr,"}",
+                     "Caption",1:length(paths_to_plts_chr)),
+    ~ {
+      cat(paste0('\n![',
+                 #.y,
+                 '](',
+                 .x,
+                 ')\n'))
+      cat('\`r fig_nums(\"',.y,'\",\"', .y,'\")`')
+    cat('\n\n')
+    })
+  #knitr::include_graphics(paths_to_mdl_plts_chr)
+ cat('\n\n')
+}
+label_refs_mat <- paste0("lab",1:(output_ls %>% purrr::flatten() %>% length())) %>% matrix(nrow = length(output_ls), byrow=T)
+purrr::walk(1:length(output_ls),
+            ~ print_ts_mdl_plts(output_ls[[.x]], 
+                                title_1L_chr = names(output_ls)[.x],
+                                label_refs_chr = label_refs_mat[.x,]))
 
 ```
 
-```{r, fig.cap=c("Caption 1", "Caption 2", "Caption 3"), echo=FALSE, message=F}
-
-cat('\n') 
-cat("###", "TEST", "\n\n")
-
-for(plots in mdl_plts_ls){
-  print(mdl_plts_ls)
-  cat('\n\n') 
-}
+ `r fig_nums("pressure-plot", "pressure against temperature")`
+```{r, fig.cap=c("Caption 1", "Caption 2", "Caption 3", "Caption 4"), echo=FALSE, message=F}
+# knitr::include_graphics(paths_to_mdl_plts_chr)
+# cat('\n') 
+# cat("###", "TEST", "\n\n")
+# 
+# for(plots in mdl_plts_ls){
+#   print(mdl_plts_ls)
+#   cat('\n\n') 
+# }
 
 
 ```
