--- a/vignettes/Child_RMDs/preamble.tex
+++ b/vignettes/Child_RMDs/preamble.tex
@@ -6,3 +6,6 @@
 } {
     \endorigfigure
 }
+\usepackage{lscape}
+\newcommand{\blandscape}{\begin{landscape}}
+\newcommand{\elandscape}{\end{landscape}}
